--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,5 @@
 controllers:
     resource:
-        path: ../src/Controller/
-        namespace: App\Controller
+        path: ../src/TestProject/Infrastructure/Controller/
+        namespace: App\TestProject\Infrastructure\Controller
     type: attribute
